--- a/views/editquestion.ejs
+++ b/views/editquestion.ejs
@@ -68,7 +68,13 @@
       </nav>
     </header>
 
-    <div class="container">
+    <div class="container p-5">
+      <a
+        href="/dashboard"
+        class="btn btn-primary btn-lg text-light d-flex justify-content-center align-items-center mb-3"
+        style="min-width: 100px; width: 150px"
+        ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Back</a
+      >
       <% if(findQuestion.questions != ''){ %>
 
       <h2 class="text-light text-center mt-5"><%=findQuestion.title%></h2>
@@ -88,10 +94,17 @@
         <% }) %>
       </div>
       <%} else {%>
-      <h6 class="alert alert-danger m-3" style="width: auto">
+      <h6 class="alert alert-danger my-3" style="width: auto">
         No question yet!
       </h6>
       <%}%>
+      <div class="text-center my-2">
+        <a
+          href="/create/<%-findQuestion._id%>/add"
+          class="btn btn-lg btn-success"
+          >Add Question</a
+        >
+      </div>
     </div>
 
     <script
