Fixing add, update and delete question.

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -148,7 +148,7 @@ button {
   body {
     padding: 20px;
   }
-  .container {
+  .container1 {
     grid-template-columns: auto;
   }
   .login-right {
