--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuBe | Create</title>
+    <title>QuBe | Dashboard</title>
     <link rel="icon" href="./assets/QuBe-Logo.png" />
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
   </head>
-  <body style="min-height: 100vh; height: 100%; width: 100vw">
+  <body style="min-height: 100vh; height: 100%; min-width: 100vw; width: 100%">
     <header>
       <nav class="navbar navbar-expand-lg p-4">
         <div class="container-fluid">
@@ -68,46 +68,7 @@
     </header>
 
     <div class="container p-5">
-      <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card">
-            <div class="card-body">
-              <form action="" method="POST">
-                <input
-                  type="text"
-                  name="title"
-                  placeholder="Enter quiz title"
-                  class="form-control-lg w-100 my-2 text-center text-uppercase"
-                  required
-                />
-                <textarea
-                  name="description"
-                  cols="30"
-                  rows="5"
-                  class="form-control fs-5 my-2"
-                  placeholder="Enter description"
-                  style="border: 1px solid black"
-                  required
-                ></textarea>
-
-                <button
-                  type="submit"
-                  class="btn btn-success btn-lg w-100 my-2 d-flex justify-content-center align-items-center"
-                >
-                  <ion-icon name="create-outline"></ion-icon>&nbsp; Create
-                </button>
-
-                <a
-                  href="/home"
-                  class="btn btn-secondary btn-lg w-100 mb-2 d-flex justify-content-center align-items-center"
-                  ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;
-                  BACK</a
-                >
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h1 class="text-light">Reports</h1>
     </div>
 
     <script
@@ -118,13 +79,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
-      integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./modified-js/question.js"></script>
   </body>
 </html>
