--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -148,7 +148,7 @@ button {
   body {
     padding: 20px;
   }
-  .container {
+  .container1 {
     grid-template-columns: auto;
   }
   .login-right {
