--- a/views/editquestion.ejs
+++ b/views/editquestion.ejs
@@ -5,108 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuBe | Edit</title>
-    <link rel="icon" href="../assets/QuBe-Logo.png" />
-    <link rel="stylesheet" href="../css/home.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="icon" href="../../assets/QuBe-Logo.png" />
+    <link rel="stylesheet" href="../../css/home.css" />
+    <link rel="stylesheet" href="../../css/bootstrap.min.css" />
+
+    <style>
+      @media (max-width: 768px) {
+        .container {
+          width: 100% !important;
+        }
+      }
+    </style>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg p-4">
-        <div class="container-fluid">
-          <a class="navbar-brand text-light fs-3" href="#">
-            <img
-              src="../assets/QuBe-Logo.png"
-              alt="Logo"
-              width="35"
-              height="35"
-              class="d-inline-block align-text-top"
-            />
-            QuBe
-          </a>
-          <span>
-            <div>
-              <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle text-light"
-                    href="#"
-                    data-bs-toggle="dropdown"
-                    data-toggle="dropdown"
-                    role="button"
-                    aria-expanded="false"
-                    aria-haspopup="true"
-                    id="navbarDropdownMenuLink"
-                  >
-                    <img
-                      src="../assets/profile.png"
-                      width="40"
-                      height="40"
-                      class="rounded-circle"
-                    />
-                    &nbsp; <%if(findUser.isAdmin){%> Administrator <%} else {%>
-                    <%=findUser.name%> <%}%>
-                  </a>
-                  <ul
-                    class="dropdown-menu dropdown-menu-end position-absolute"
-                    aria-labelledby="navbarDropdownMenuLink"
-                  >
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li class="logout-btn">
-                      <a
-                        class="dropdown-item logout-btn"
-                        href="/api/users/logout"
-                        >Logout</a
-                      >
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </span>
-        </div>
-      </nav>
-    </header>
-
-    <div class="container p-5">
+    <div class="container w-50 mt-5">
+      <% if(findQuestion.questions[arr-1] != null){%><%-
+      include("layouts/edithandlers.ejs")%> <%} else {%>
       <a
-        href="/dashboard"
+        href="/quiz/<%=findQuestion._id%>"
         class="btn btn-primary btn-lg text-light d-flex justify-content-center align-items-center mb-3"
         style="min-width: 100px; width: 150px"
         ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Back</a
       >
-      <% if(findQuestion.questions != ''){ %>
-
-      <h2 class="text-light text-center mt-5"><%=findQuestion.title%></h2>
-      <hr class="text-light my-5" />
-      <% let count = 0%>
-
-      <div class="text-center">
-        <%findQuestion.questions.forEach(question => { %> <% count++%>
-        <a
-          href="/create/<%-findQuestion._id%>/<%=count%>"
-          class="btn btn-outline-light btn-lg text-start my-2 w-75"
-          ><%=question.question.text%>
-          <a href="" class="btn btn-danger rounded-circle mx-2"
-            ><ion-icon name="trash-outline"></ion-icon></a
-        ></a>
-
-        <% }) %>
-      </div>
-      <%} else {%>
-      <h6 class="alert alert-danger my-3" style="width: auto">
-        No question yet!
-      </h6>
+      <p class="alert alert-danger">No data found.</p>
       <%}%>
-      <div class="text-center my-2">
-        <a
-          href="/create/<%-findQuestion._id%>/add"
-          class="btn btn-lg btn-success"
-          >Add Question</a
-        >
-      </div>
     </div>
-
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -115,7 +38,13 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+      integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="../../js/bootstrap.bundle.min.js"></script>
+    <script src="../../modified-js/question.js"></script>
   </body>
 </html>
