--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -1,17 +1,22 @@
 <div class="d-flex justify-content-center align-items-center flex-column h-75">
-  <p class="text-light fs-4">View recent quizzes.</p>
+  <a
+    href="/create"
+    class="btn btn-success btn-lg d-flex justify-content-center align-items-center my-3"
+  >
+    <ion-icon name="create-outline"></ion-icon>&nbsp; Create Quiz
+  </a>
+
   <a
     href="/dashboard"
-    class="btn btn-primary btn-lg mb-3 d-flex justify-content-center align-items-center"
+    class="btn btn-primary btn-lg d-flex justify-content-center align-items-center my-3"
   >
     <ion-icon name="grid-outline"></ion-icon>&nbsp; Dashboard
   </a>
 
-  <p class="text-light mt-3 fs-4">Create new quizzes.</p>
   <a
-    href="/create"
-    class="btn btn-success btn-lg d-flex justify-content-center align-items-center"
+    href="/reports"
+    class="btn btn-danger btn-lg d-flex justify-content-center align-items-center my-3"
   >
-    <ion-icon name="create-outline"></ion-icon>&nbsp; Create Quiz
+    <ion-icon name="stats-chart-outline"></ion-icon>&nbsp; Reports
   </a>
 </div>
