Adding lobby for host and client.

--- a/views/layouts/user.ejs
+++ b/views/layouts/user.ejs
@@ -1,14 +1,14 @@
 <div class="d-flex justify-content-center align-items-center flex-column h-75">
   <div class="w-100">
     <h1 id="title">Join a Game</h1>
-    <form action="">
+    <form action="" method="POST">
       <div class="form-field">
-        <label id="label">Display Name</label>
-        <input id="name" type="text" name="name" autofocus required />
+        <label class="label">Display Name</label>
+        <input id="name" type="text" name="name" required />
       </div>
       <br />
       <div class="form-field">
-        <label id="label">Game Pin</label>
+        <label class="label">Game Pin</label>
         <input id="pin" type="number" name="pin" required />
       </div>
       <br />
