--- a/views/questionsview.ejs
+++ b/views/questionsview.ejs
@@ -84,9 +84,7 @@
           class="btn btn-lg btn-success m-2"
           >Add Question</a
         >
-        <a
-          href="/quiz/<%-findQuestion._id%>/lobby"
-          class="btn btn-lg btn-primary m-2"
+        <a href="/host/<%-findQuestion._id%>" class="btn btn-lg btn-primary m-2"
           >Start Quiz</a
         >
       </div>
