--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -32,7 +32,7 @@
                     </div> -->
                     <div class="form-item">
                         <label for="email">Enter Email</label>
-                        <input type="text" name="email" id="email" required>
+                        <input type="email" name="email" id="email" required>
                     </div>
                     <!-- <div class="form-item">
                         <label for="phone">Enter Phone Number</label>
